--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@primevue/themes": "^4.0.4",
     "axios": "^1.7.4",
     "core-js": "^3.8.3",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.0.4",
     "vue": "^3.2.13"
   },
   "devDependencies": {
